[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
ferris-says = "0.3.1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.5.11"
rusqlite = { version = "0.30.0", features = ["bundled"] }
csv = "1.1"
