[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.4"
csv = "1.1"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
metrics-exporter-prometheus = { version = "0.13", default-features = false }
metrics = { version = "0.22", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
